20200124 2234 Update: Fixed footer not showing up on desktop

--- a/main.css
+++ b/main.css
@@ -160,5 +160,6 @@ h3 {
         bottom: 0;
         width: 100%;
         font-size: 12px;
+        display: block;
     }
 }
